Revelation changelog

---------------[ xxxx-xx-xx : 0.5.0 ]---------------

2006-06-02  Erik Grinaker <erikg@codepoet.no>

	* don't crash on missing theme icons [Wade Berrier]

2006-03-07  Erik Grinaker <erikg@codepoet.no>

	* don't use passwords in default goto commands

	* password checker and generator follow "show passwords" preference

2006-02-15  Erik Grinaker <erikg@codepoet.no>

	* handle errors while loading icons

2006-02-10  Erik Grinaker <erikg@codepoet.no>

	* added mman module

	* call mlockall() to ensure memory is never swapped to disk

	* added note to lock dialog when quit disabled due to unsaved changes

	* use gtk.FileChooser.set_do_overwrite_confirmation()

	* removed workarounds for bugs in older versions of pygtk/gnome-python

2006-02-08  Erik Grinaker <erikg@codepoet.no>

	* cleaned up preferences dialog

	* set about dialog as transient of parent window

	* password generator now always avoids ambiguous characters

	* use GPL notice instead of full GPL in about dialog

2006-02-06  Erik Grinaker <erikg@codepoet.no>

	* don't use deprecated gnome-python modules

	* moved preference dialog from dialog module to main script

	* use gtk.AboutDialog for about dialogs

	* removed the Help > Homepage menu item

	* use gnome.ui.authentication_manager_init() instead of wrapping it

	* use gnomeapplet.Applet.request_focus() instead of wrapping it

	* removed gnomemisc module

	* depend on pygtk 2.8 and gnome-python 2.10

	* use gtk.FileChooserButton for selecting files

	* make file buttons work for remote files

---------------[ 2006-02-06 : 0.4.7 ]---------------

2006-02-03  Erik Grinaker <erikg@codepoet.no>

	* ignore errors when automatically reloading file in applet

2006-02-02  Erik Grinaker <erikg@codepoet.no>

	* added dependencies to README

	* build pyc/pyo files correctly when using DESTDIR with make install

	* bumped version number to 0.4.7

	* don't use gnomevfs.URI.is_local, stats all filesystems (hangs on
	missing network mounts)
