@@ -113,7 +113,6 @@
 		<action>
 			<name>find-next</name>
 			<label>Find Ne_xt</label>
-			<stock>revelation-next</stock>
 			<accel>&lt;Control&gt;G</accel>
 			<description>Find the next search match</description>
 		</action>
@@ -121,7 +120,6 @@
 		<action>
 			<name>find-previous</name>
 			<label>Find Pre_vious</label>
-			<stock>revelation-previous</stock>
 			<accel>&lt;Shift&gt;&lt;Control&gt;G</accel>
 			<description>Find the previous search match</description>
 		</action>
@@ -278,6 +276,11 @@
 		<action>
 			<name>menu-edit</name>
 			<label>_Edit</label>
+		</action>
+
+		<action>
+			<name>menu-entry</name>
+			<label>E_ntry</label>
 		</action>
 
 		<action>
