@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.5.0 ]---------------
 
+2006-06-10  Erik Grinaker <erikg@codepoet.no>
+
+	* added new entry menu
+
 2006-06-02  Erik Grinaker <erikg@codepoet.no>
 
 	* don't crash on missing theme icons [Wade Berrier]
